--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,58 @@
 <!doctype html>
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
   <title>WebSalePostProduct</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <!-- Bootstrap Styles-->
+  <!-- <link href="assets/css/bootstrap.css" rel="stylesheet" /> -->
+  <!-- FontAwesome Styles-->
+  <!-- <link href="assets/css/font-awesome.css" rel="stylesheet" /> -->
+  <!-- Morris Chart Styles-->
+  <!-- Custom Styles-->
+  <!-- <link href="assets/css/fontawesome-all.css" rel="stylesheet" /> -->
+  <!-- <link href="assets/css/style.css" rel="stylesheet"/> -->
+  <!-- <link href="assets/css/custom-styles.css" rel="stylesheet" /> -->
+  <!-- Google Fonts-->
+  <!-- <link
+    href="//fonts.googleapis.com/css?family=Raleway:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i"
+    rel="stylesheet">
+  <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css' /> -->
+
 </head>
+
 <body>
   <app-root></app-root>
+
+  <!-- JS Scripts-->
+  <!-- jQuery Js -->
+  <!-- <script src="assets/js/jquery-1.10.2.js"></script> -->
+  <script src="assets/js/jquery-3.2.1.js"></script>
+
+  <!-- Bootstrap Js -->
+  <!-- <script src="assets/js/bootstrap.min.js"></script> -->
+
+  <!-- <script src="assets/materialize/js/materialize.min.js"></script> -->
+
+  <!-- Metis Menu Js
+  <script src="assets/js/jquery.metisMenu.js"></script> -->
+  <!-- Morris Chart Js -->
+  <!-- <script src="assets/js/morris/raphael-2.1.0.min.js"></script>
+  <script src="assets/js/morris/morris.js"></script>
+
+
+  <script src="assets/js/easypiechart.js"></script>
+  <script src="assets/js/easypiechart-data.js"></script>
+
+  <script src="assets/js/Lightweight-Chart/jquery.chart.js"></script>
+
+  <script src="assets/js/audioplayer.js"></script>
+
+   Custom Js -->
+  <!-- <script src="assets/js/custom-scripts.js"></script> -->
 </body>
+
 </html>
